--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,2 +1,7 @@
 DATABASE_URL="postgres://parkshare:parkshare@localhost:5432/parkshare"
 JWT_SECRET="secret"
+
+# Google OAuth
+GOOGLE_CLIENT_ID="your-client-id"
+GOOGLE_CLIENT_SECRET="your-client-secret"
+GOOGLE_REDIRECT_URL="http://localhost:3000/api/v1/auth/google/callback"
