--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,6 +1,8 @@
 DATABASE_URL="postgres://parkshare:parkshare@localhost:5432/parkshare"
 JWT_SECRET="secret"
 
+USE_CORS=false
+
 # Google OAuth
 GOOGLE_CLIENT_ID="your-client-id"
 GOOGLE_CLIENT_SECRET="your-client-secret"
