--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,3 +1,5 @@
+FRONTEND_URL="http://localhost:3000"
+
 DATABASE_URL="postgres://parkshare:parkshare@localhost:5432/parkshare"
 JWT_SECRET="secret"
 
