--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -5,4 +5,5 @@ GOOGLE_REDIRECT_URL="http://localhost:3000/api/v1/auth/google/callback"
 
 AUTH_SECRET="secret"
 
+NEXT_PUBLIC_API_URL="http://localhost:5000"
 API_URL="http://localhost:5000"
