--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "test": "turbo run test",
+    "test:api": "pnpm --filter @parking/api test",
+    "test:web": "pnpm --filter web test:run"
   },
   "devDependencies": {
     "prettier": "^3.7.4",
