--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "modd",
     "test": "go env -w GOCACHE=C:/temp/go-cache && go test ./internal/... -v"
   },
   "keywords": [],
