ci: added husky

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,8 +8,7 @@
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
-    "test": "vitest",
-    "test:run": "vitest run"
+    "test": "vitest run"
   },
   "dependencies": {
     "next": "16.1.1",
