--- a/package.json
+++ b/package.json
@@ -10,16 +10,30 @@
     "check-types": "turbo run check-types",
     "test": "turbo run test",
     "test:api": "pnpm --filter @parking/api test",
-    "test:web": "pnpm --filter web test:run"
+    "test:web": "pnpm --filter web test:run",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@parkshare/biome-config": "workspace:",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "turbo": "^2.7.2",
     "typescript": "5.9.2"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "biome check --apply"
+    ],
+    "*.{json,md}": [
+      "biome format --write"
+    ],
+    "apps/api/**/*.go": [
+      "golangci-lint run --fix"
+    ]
   }
 }
