--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
-      "biome check --apply"
+      "biome check . --write"
     ],
     "*.{json,md}": [
       "biome format --write"
