--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,15 +11,18 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "brand-logos": "^0.1.1",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-auth": "5.0.0-beta.30",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@parkshare/tsconfig": "workspace:*",
-    "@parkshare/biome-config": "workspace:*",
     "@biomejs/biome": "2.2.0",
+    "@parkshare/biome-config": "workspace:*",
+    "@parkshare/tsconfig": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
