--- a/package.json
+++ b/package.json
@@ -26,14 +26,8 @@
     "node": ">=18"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx}": [
-      "biome check . --write"
-    ],
-    "*.{json,md}": [
-      "biome format --write"
-    ],
-    "apps/api/**/*.go": [
-      "golangci-lint run --fix"
+    "*.{ts,tsx,js,jsx,json,md}": [
+      "biome check --write"
     ]
   }
 }
