chore: improved location autocomplete

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -7,3 +7,6 @@ AUTH_SECRET="secret"
 
 NEXT_PUBLIC_API_URL="http://localhost:5000"
 API_URL="http://localhost:5000"
+
+# Mapbox (for location autocomplete)
+NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN="your-mapbox-access-token"
