--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "brand-logos": "^0.1.1",
     "lucide-react": "^0.562.0",
+    "mapbox-gl": "^3.17.0",
     "next": "16.1.1",
     "next-auth": "5.0.0-beta.30",
     "react": "19.2.3",
@@ -28,6 +29,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
