fix: converts dollars to cents in request payload for creation

--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -2,6 +2,7 @@ name: 'Parkshare'
 
 services:
   postgres:
+    platform: linux/x86_64
     image: postgis/postgis:18-3.6
     container_name: parkshare-postgres
     restart: always
